--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-datepicker": "^1.0.4",
     "react-dom": "^16.2.0",
     "react-draft-wysiwyg": "^1.12.4",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "redux-thunk": "^2.2.0",
